[tool.poetry]
name = "yaht"
version = "0.1.0"
description = "Yet Another Hyperparameter Tweaker"
authors = ["basilisk <d0ix9oqh@anonaddy.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
contourpy = "^1.2.0"
cycler = "^0.12.1"
fonttools = "^4.47.0"
iniconfig = "^2.0.0"
jedi = "^0.17.2"
kiwisolver = "^1.4.5"
matplotlib = "^3.8.2"
networkx = "^3.1"
numpy = "^1.25.2"
packaging = "^23.1"
pandas = "^2.0.3"
parso = "^0.7.1"
Pillow = "^10.1.0"
pluggy = "^1.2.0"
pyparsing = "^3.1.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
python-dateutil = "^2.8.2"
python-jsonrpc-server = "^0.4.0"
python-language-server = "^0.36.2"
pytz = "^2023.3"
PyYAML = "^6.0"
seaborn = "^0.13.0"
six = "^1.16.0"
tzdata = "^2023.3"
ujson = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
